added tablet view circles

--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -78,6 +78,9 @@ a {
 	.mobile-view-jumbotron {
 		display: none;
 	}
+	.mobile-view-circles {
+		display: none;
+	}
 	.tablet-view-nav {
 		visibility: visible;
 	}
@@ -94,6 +97,19 @@ a {
 
 	.tablet-view-jumbotron {
 		visibility: visible;
+	}
+	.tablet-view-circles {
+		visibility: visible;
+		display: flex;
+		justify-content: space-evenly;
+	}
+	.tablet-circle {
+		font-family: 'Bebas Neue', cursive;
+		width: 121px;
+		height: 121px;
+		border: .5rem solid white;
+		border-radius: 50%;
+		text-align: center;
 	}
 
 }
