--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -1,6 +1,6 @@
 body {
 	font-family: 'Abel', sans-serif;
-	background-color: #eae8e6;
+	background-color: #e6e6e6;
 }
 a {
 	color: black;
@@ -9,19 +9,19 @@ a {
 .top-background {
 	height: 4.3rem;
 	width: 100%;
-	background-color: white;
+	background-color: #f0f0f0;
 	position: absolute;
 	top: 2rem;
 }
 .jumbotron {
-	background-color: #eae8e6;
+	background-color: #e6e6e6;
 	font-family: 'Bebas Neue', cursive;
 }
 .circle {
 	font-family: 'Bebas Neue', cursive;
 	width: 121px;
 	line-height: 105px;
-	border: .5rem solid white;
+	border: .5rem solid #f0f0f0;
 	border-radius: 50%;
 	text-align: center;
 }
@@ -46,24 +46,31 @@ a {
 	line-height: normal;
 }
 .red-circle {
-	background-color: rgba(255, 0, 0, 0.69);
+	background-color: #e6563b;
 }
 .small-red-circle {
 	/*font-size: 10px;*/
 }
 .orange-circle {
-	background-color: rgba(255, 165, 0, 0.66);
+	background-color: #dea03d;
 }
 .green-circle {
-	background-color: rgba(0, 128, 0, 0.51);
+	background-color: #7cb06c;
 }
 .blue-circle {
-	background-color: #228d84;
+	background-color: #00aba9;
 }
 .tablet-container {
 	display: none;
 }
 .tablet-container-2 {
+	display: none;
+}
+.tablet-view-circles {
+	display: none;
+}
+
+.tablet-view-jumbotron {
 	display: none;
 }
 
