--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -70,12 +70,16 @@ a {
 	display: none;
 }
 
-.tablet-view-jumbotron {
-	display: none;
+picture > img {
+	border: 5px solid rgba(240, 240, 240, 0.5);
+	border-radius: 3%;
+	padding: 2px;
 }
 
 @media screen and (min-width:320px) {
-
+.tablet-view-jumbotron {
+	display: none;
+}
 }
 
 @media screen and (min-width:767px) {
@@ -103,7 +107,7 @@ a {
 	}
 
 	.tablet-view-jumbotron {
-		visibility: visible;
+		display: contents;
 	}
 	.tablet-view-circles {
 		visibility: visible;
